done user model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: sercret
       POSTGRES_DB: finance_db
+    volumes:
+      - ./sql/:/docker-entrypoint-initdb.d/
